[project]
name = "gdl-molecule"
version = "0.1.0"
description = "Graph Deep Learning for Molecule Property Prediction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "torch-geometric>=2.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
]

[dependency-groups]

